syntax = "proto3";

import "google/bytestream/bytestream.proto";

package kv_storage;
option go_package = "github.com/bitrise-io/bitrise-build-cache-cli/kv_storage";

service KVStorage {
  rpc Get(google.bytestream.ReadRequest) returns (stream google.bytestream.ReadResponse);
  rpc Put(stream google.bytestream.WriteRequest) returns (google.bytestream.WriteResponse);
}
